<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account">Create New Account ?</string>
    <string name="register_account">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="username">UserName</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="profession">Profession</string>
    <string name="submit">Save</string>
    <string name="write_something_here">Write something here</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="_0hrs_ago">0hrs ago</string>
</resources>
