<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/friend"
            android:title="@string/friends"
            android:icon="@drawable/ic_friend"/>
        <item
            android:id="@+id/findFriend"
            android:title="@string/find_friends"
            android:icon="@drawable/ic_find_friend"/>

        <item
            android:id="@+id/chat"
            android:title="@string/chat"
            android:icon="@drawable/ic_chat"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>